# loregraph

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.ru.md  start.bat  start.sh
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/evals/: __init__.py  golden_retrieval.py  hallucination_cases.py  metrics.py  run_hallucination_eval.py  run_retrieval_eval.py
backend/lss_format_json_example/: Виктория Виндель — Long Story Short.json
backend/src/loregraph/: config.py  exceptions.py  main.py
backend/src/loregraph/agent/: events.py  graph.py  import_graph.py  import_runner.py  import_source.py  import_state.py  mcp_tools.py  multimodal.py  relationships.py  runner.py  state.py  usage.py
backend/src/loregraph/agent/nodes/: assistant.py  check_duplicates.py  commit.py  generate_edit.py  generate_lore.py  generate_relationships.py  human_review.py  import_commit.py  import_extract.py  import_merge.py  import_plan.py  import_registry.py  import_review.py  retrieve_context.py  tools.py  verify_grounding.py
backend/src/loregraph/agent/skills/: registry.py
backend/src/loregraph/api/: deps.py
backend/src/loregraph/api/routers/: agent.py  attachments.py  connections.py  edges.py  entities.py  graph.py  import_jobs.py  knowledge.py  projects.py  realtime.py  usage.py
backend/src/loregraph/connectors/: context.py  live.py  markdown_codec.py  protocols.py  registry.py  runtime.py  setup.py
backend/src/loregraph/connectors/foundry/: connector.py  mcp_client.py
backend/src/loregraph/connectors/longstoryshort/: connector.py  parser.py
backend/src/loregraph/connectors/mcp/: connector.py  stdio_client.py
backend/src/loregraph/connectors/obsidian/: connector.py  frontmatter.py
backend/src/loregraph/llm/: embeddings.py  factory.py  structured.py  usage.py
backend/src/loregraph/mcp_server/: deps.py  server.py
backend/src/loregraph/observability/: __init__.py  langfuse_provider.py  langsmith_provider.py  protocols.py
backend/src/loregraph/prompts/: __init__.py  assistant.system.md  edit_entity.system.md  edit_entity.user.md  generate_lore.system.md  generate_lore.user.md  import_extract.system.md  import_extract.user.md  import_registry.system.md  import_registry.user.md  manage_relationships.system.md  manage_relationships.user.md  verify_grounding.system.md  verify_grounding.user.md
backend/src/loregraph/schemas/: agent.py  attachment.py  connection.py  edge.py  entity.py  graph.py  import_job.py  knowledge.py  project.py  project_transfer.py  usage.py
backend/src/loregraph/seed/: demo_project.json
backend/src/loregraph/services/: connector_push.py  document_ingest.py  edge_service.py  entity_service.py  event_bus.py  graph_query.py  knowledge_index.py  knowledge_ingest.py  project_transfer.py  text_similarity.py  vector_index.py
backend/src/loregraph/storage/: composition.py  protocols.py
backend/src/loregraph/storage/sqlite/: agent_session_store.py  attachment_store.py  connection_store.py  db.py  edge_store.py  entity_store.py  import_job_store.py  knowledge_source_store.py  models.py  project_store.py  usage_store.py
backend/src/loregraph/storage/vectorstore/: chroma_store.py  hybrid_search.py  protocols.py
backend/tests/: conftest.py  fakes.py  test_agent_api.py  test_agent_attachments_api.py  test_agent_edit.py  test_agent_external_sources.py  test_agent_graph.py  test_agent_mcp_tools.py  test_agent_relationships.py  test_agent_runner_events.py  test_agent_runner_transcript.py  test_agent_skill_run.py  test_attachments.py  test_connections_api.py  test_connector_push.py  test_db_migration.py  test_document_ingest.py  test_edges.py  test_embeddings.py  test_entities.py  test_entity_icon.py  test_entity_positions.py  test_eval_metrics.py  test_event_bus.py  test_foundry_connector.py  test_graph_query.py  test_grounding_guard_eval.py  test_hybrid_search.py  test_import_entity_links.py  test_import_graph.py  test_import_jobs_api.py  test_import_migration.py  test_import_runner.py  test_knowledge_api.py  test_knowledge_index.py  test_knowledge_ingest.py  test_llm_factory.py  test_lss_connector.py  test_markdown_codec.py  test_mcp_connector.py  (+13 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: agent.ts  attachments.ts  client.ts  connections.ts  edges.ts  entities.ts  graph.ts  importJobs.ts  knowledge.ts  projects.ts  realtime.ts  types.ts
frontend/src/components/: DemoBanner.tsx  EntityNavigationContext.tsx
frontend/src/data/: helpContent.ts
frontend/src/hooks/: useAgent.ts  (+13 more)
scripts/: changelog-section.sh  check-version.sh  start.ps1  start.sh
(+69 files in other folders)
