[project]
name = "loregraph"
version = "0.1.0"
description = "Local self-hosted app for preparing and running tabletop RPG campaigns, with a hybrid vector+graph lore store and an HITL-reviewed AI agent layer."
authors = [
    { name = "korsh", email = "korshunov.hades1337@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "langchain-anthropic>=1.4.8",
    "langchain-cerebras>=0.1.0",
    "langchain-cohere>=0.3.0",
    "langchain-core>=1.4.9",
    "langchain-deepseek>=0.1.0",
    "langchain-fireworks>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "langchain-openrouter>=0.1.0",
    "langchain-together>=0.3.0",
    "langchain-xai>=0.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
loregraph-mcp = "loregraph.mcp_server.server:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[project.optional-dependencies]
langsmith = ["langsmith>=0.3.0"]
langfuse = ["langfuse>=2.0.0"]
tracing = ["langsmith>=0.3.0", "langfuse>=2.0.0"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "ASYNC", "RUF"]
# RUF001-003 flag Cyrillic as "ambiguous with Latin"; user-facing strings in
# this app are legitimately bilingual (RU/EN), so these are pure noise.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true

# rank-bm25 ships no py.typed marker / stubs — narrowly scoped, not a
# blanket relaxation of strict mode.
[[tool.mypy.overrides]]
module = "rank_bm25"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
